crates/pardosa-genome/tests/compile_fail/isize_field.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    offset: isize,
}

fn main() {}
