crates/pardosa-genome/tests/compile_fail/isize_field.stderr
error: GenomeSafe: isize has platform-dependent size. Use u32/u64/i32/i64 for portable serialization.
 --> tests/compile_fail/isize_field.rs:5:13
  |
5 |     offset: isize,
  |             ^^^^^
